--- a/style.css
+++ b/style.css
@@ -40,3 +40,60 @@ body {
 h1, h2 {
     text-align: center;
 }
+
+.button-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.button-container > a {
+    display: block;
+    border: medium solid #5d7238;
+    border-radius: 5px;
+    padding: 10px;
+    padding-bottom: 0px;
+}
+
+.button-container > a > svg {
+    fill: #5d7238;
+}
+
+#dark-screen {
+    display: none;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    background-color: black;
+    opacity: 30%;
+}
+
+#feedback-container {
+    display: none;
+    opacity: 100%;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 90%;
+    z-index: 20;
+}
+
+#feedback-container > div {
+    background-color: white;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+    margin: 0 auto;
+    border: thin solid black;
+}
+
+#dark-screen, #feedback-container {
+    display: block;
+}
+
+h4 { 
+    display: none;
+}
