--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Adobe Arabic;
-    font-size: 24pt;
+    font-size: 2.5em;
     direction: rtl;
 }
 
@@ -50,13 +50,15 @@ h1, h2 {
 .button-container > a {
     display: block;
     border: medium solid #5d7238;
-    border-radius: 5px;
-    padding: 10px;
+    border-radius: 0.5em;
+    padding: 0.25em;
     padding-bottom: 0px;
 }
 
 .button-container > a > svg {
     fill: #5d7238;
+    width: 1.5em;
+    height: 1.5em;
 }
 
 #dark-screen {
@@ -77,7 +79,7 @@ h1, h2 {
     position: fixed;
     top: 0px;
     left: 0px;
-    width: 90%;
+    width: 100%;
     z-index: 20;
 }
 
@@ -86,14 +88,34 @@ h1, h2 {
     margin-left: auto;
     margin-right: auto;
     width: 90%;
-    margin: 0 auto;
+    height: 90%;
+    margin: 1em auto;
     border: thin solid black;
 }
 
 #dark-screen, #feedback-container {
-    display: block;
+    display: none;
 }
 
 h4 { 
     display: none;
+}
+
+#close-button > svg {
+    color: black;
+    width: 1em;
+    padding-right: 0.25em;
+}
+
+#submit-button > svg {
+    color: black;
+    width: 2em;
+    padding: 0.5em;
+}
+
+#messageContent {
+    width: 95%;
+    height: 5em;
+    margin-left: 2%;
+    margin-right: 2%;
 }
