--- a/style.css
+++ b/style.css
@@ -141,6 +141,8 @@ body > p {
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: Adobe Arabic;
+    font-size: 1.5em;
   }
 
   #navbar-container {
@@ -159,7 +161,6 @@ body > p {
     display: block;
     color: white;
     text-align: center;
-    padding: 15px;
     text-decoration: none;
   }
 
@@ -167,10 +168,11 @@ body > p {
       fill: white;
       width: 0.75em;
       height: 0.75em;
+      padding-top: 0.5em;
   }
 
   select {
-      font-size: 20px;
+    font-size: 1em;
   }
 
   .sep {
